// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shard should show for assigned primary shards 1`] = `
<div
  className="shard primary started master"
  data-shard-classification="shard primary started master 0"
  data-shard-tooltip="Started"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="primary"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;

exports[`Shard should show for assigned replica shards 1`] = `
<div
  className="shard replica started master"
  data-shard-classification="shard replica started master 0"
  data-shard-tooltip="Started"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="secondary"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;

exports[`Shard should show for initializing shards 1`] = `
<div
  className="shard primary initializing master"
  data-shard-classification="shard primary initializing master 0"
  data-shard-tooltip="Initializing"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="default"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;

exports[`Shard should show for relocating shards 1`] = `
<div
  className="shard primary relocating master"
  data-shard-classification="shard primary relocating master 0"
  data-shard-tooltip="Relocating"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="accent"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;

exports[`Shard should show unassigned primary shards 1`] = `
<div
  className="shard primary unassigned emergency master"
  data-shard-classification="shard primary unassigned emergency master 0"
  data-shard-tooltip="Unassigned"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="danger"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;

exports[`Shard should show unassigned replica shards 1`] = `
<div
  className="shard replica unassigned"
  data-shard-classification="shard replica unassigned 0"
  data-shard-tooltip="Unassigned"
  data-test-subj="shardIcon"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <EuiBadge
    color="warning"
    iconSide="left"
  >
    0
  </EuiBadge>
</div>
`;
